--- a/level-1-cloud-gcp-basics/1.1-cloud-computing-basics/1.1.3-benefits-scale-speed-cost.md
+++ b/level-1-cloud-gcp-basics/1.1-cloud-computing-basics/1.1.3-benefits-scale-speed-cost.md
@@ -1,4 +1,4 @@
-![Image](https://www.researchgate.net/publication/351892900/figure/fig2/AS%3A1027890158264320%401622079519290/shows-the-benefits-of-Cloud-Computing-21-Speed-Large-quantity-data-of-computing-can-be.png)
+<img width="850" height="363" alt="image" src="https://github.com/user-attachments/assets/5e468c48-1f55-47dc-ab87-795e7c627e95" />
 
 ![Image](https://www.nops.io/wp-content/uploads/2023/03/What-Are-The-Types-Of-Scaling-In-Cloud-Computing-nOps-1024x536.png)
 
