Add additional images to cloud computing basics

--- a/level-1-cloud-gcp-basics/1.1-cloud-computing-basics/1.1.1-what-cloud-computing-means.md
+++ b/level-1-cloud-gcp-basics/1.1-cloud-computing-basics/1.1.1-what-cloud-computing-means.md
@@ -1,3 +1,5 @@
+<img width="737" height="343" alt="image" src="https://github.com/user-attachments/assets/5510e267-799d-4ab1-a637-c01172c43115" />
+
 ![Image](https://media.licdn.com/dms/image/v2/D4D12AQHRq7c1LDOT9g/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1691863773579?e=2147483647\&t=cFk3PFMJzwsEEhv8TAycNNzpUFYhM6BY4vt84pNuA5A\&v=beta)
 
 ![Image](https://miro.medium.com/1%2A2rZ5FhUabpPhFPN8V7O_JA.jpeg)
