Update cloud explanation with more images
Added additional images to enhance the explanation of cloud computing.

--- a/level-0-foundations/0.3-computer-internet-basics/0.3.4-what-is-a-cloud-simple-explanation.md
+++ b/level-0-foundations/0.3-computer-internet-basics/0.3.4-what-is-a-cloud-simple-explanation.md
@@ -1,4 +1,10 @@
+<img width="737" height="343" alt="image" src="https://github.com/user-attachments/assets/8f16e64d-4598-446a-8ea4-ef050c19acf8" />
+
+<img width="850" height="424" alt="image" src="https://github.com/user-attachments/assets/eefb886b-02ed-438d-9184-de110200fbbf" />
+
 ![Image](https://d2cest1yk6hx2d.cloudfront.net/uninets-001/store/3057/article%20images/cloud-computing-applications-example-image.png)
+
+<img width="553" height="502" alt="image" src="https://github.com/user-attachments/assets/6cf9bc3c-511d-489d-b569-0c1f8a382775" />
 
 ---
 
