--- a/level-1-cloud-gcp-basics/1.2-introduction-to-google-cloud-platform-gcp/1.2.3-gcp-vs-aws-vs-azure-high-level.md
+++ b/level-1-cloud-gcp-basics/1.2-introduction-to-google-cloud-platform-gcp/1.2.3-gcp-vs-aws-vs-azure-high-level.md
@@ -12,7 +12,7 @@
 
 ---
 
-## 1. Concept Explanation (Simple English)
+## 1. Concept Explanation 
 
 **GCP, AWS, and Azure** are the **top three cloud platforms** in the world.
 
